# WassersteinFlowMatching

./: .gitignore  README.md  anim_utils.py  prot_figure_utils.py  prot_utils.py  pyproject.toml  tutorial_se3_frames_rwfm.ipynb  tutorial_so3_frames_rwfm.ipynb
.github/: test.yaml
.github/workflows/: test.yaml
docs/: MULTI_GPU_TRAINING.md
notebooks/: example_multi_gpu_training.py  tutorial_spherical_mnist_rwfm.py
scripts/: scimilarity_train.py
src/wassersteinflowmatching/bures_wasserstein/: BuresWassersteinFlowMatching.py  _utils_Neural.py
src/wassersteinflowmatching/riemannian_wasserstein/: DefaultConfig.py  RiemannianWassersteinFlowMatching.py  SE3RiemannianWassersteinFlowMatching.py  SE3WassersteinFlowMatching.py  __init__.py  _utils_GeomTransformer.py  _utils_Processing.py  _utils_Transformer.py  pascient_fm.py  pytorch_lightning_dataloader.py  utils_Geom.py  utils_Hyperbole.py  utils_Noise.py  utils_OT.py  utils_Sphere.py
src/wassersteinflowmatching/wasserstein/: DefaultConfig.py  SpatialWassersteinFlowMatching.py  WassersteinFlowMatching.py  __init__.py  _utils_Transformer.py  utils_Noise.py  utils_OT.py
tests/: test_bures_wasserstein.py  test_riemannian_wasserstein.py  test_spatialwasserstein.py  test_wasserstein.py  test_wassersteinflowmatching.py
tutorials/: hyperbolic_plane_rwfm.ipynb  tutorial_point_cloud_wfm.ipynb  tutorial_se3_frames_rwfm.ipynb  tutorial_spatial_niche_wfm.ipynb  tutorial_spiral_bwfm.ipynb
wassersteinflowmatching/: DefaultConfig.py  WassersteinFlowMatching.py  _utils_Transformer.py  utils_Noise.py  utils_OT.py
