[tool.poetry]
name = "wassersteinflowmatching"
version = "0.1.0"
description = "Flow Matching for point clouds"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.10.6"
ott-jax = "^0.4.9"
optax = "^0.2.4"
tqdm = "^4.66.2"
pot = "^0.9.4"
scanpy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"