[project]
name = "wassersteinflowmatching"
version = "0.1.0"
description = "Flow Matching for point clouds"
authors = [
    {name = "Doron Haviv"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "ott-jax>=0.4.9",
    "optax>=0.2.4",
    "tqdm>=4.66.2",
    "pot>=0.9.4",
    "scanpy>=1.11.2",
    "wandb>=0.21.1",
    "jax[cuda12]>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
